# raytracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color.h  geometry.h  geometry.tcc  geometry_test.cc  math.cc  math.h  math.tcc  math_test.cc  raytracer  raytracer.cc
.cmake/api/v1/reply/: cache-v2-678575789f341d1550c7.json  cmakeFiles-v1-3abb0534a88f389afe76.json  codemodel-v2-4441f742b4e11b4bbb4e.json  codemodel-v2-f97e953b41befa79e9cb.json  index-2024-04-18T06-15-15-0883.json  index-2024-04-25T08-09-16-0113.json  target-raytracer-ad5a7531a8209acece76.json  target-raytracer-ded8951ff0cdd2e39de5.json
